# digest

./: Cargo.toml  README.md  feeds.txt  flake.nix  true
crates/feeds/: Cargo.toml
crates/feeds/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: handle.rs  main.rs
crates/site-app/: Cargo.toml
crates/site-app/src/: lib.rs
crates/site-app/style/src/: main.css
