
[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.dependencies]
tracing = { version = "0.1" }

leptos = { version = "0.8", features = [ "nightly", "tracing" ] }
leptos_axum = { version = "0.8", features = [  ] }

any_spawner = { version = "0.3", features = [ "tokio", "tracing" ] }
futures = { version = "0.3" }
tokio = { version = "1" }

miette = { git = "https://github.com/zkat/miette", default-features = false, features = [
  "derive",
] }
